# MLENG_FIAP

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  coverage.xml  pyproject.toml
fase_2/: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.api  Dockerfile.mlflow  METRICS_DOCUMENTATION.md  MODEL_CARD.md  NEXT_STEPS.md  README.md  docker-compose.yml  dvc.yaml  presentation.html  pyproject.toml  ruff.toml  scratch.py
fase_2/.dvc/: config
fase_2/.github/workflows/: ci.yml
fase_2/documentacao/: 01_como_rodar_local_docker.md  02_pipeline_treino_dvc.md  03_infraestrutura_aws_mlflow.md
fase_2/ecommerce-recommender/: .gitignore  README.md  requirements.txt
fase_2/ecommerce-recommender/configs/: base.yaml  mlflow.yaml  model.yaml
fase_2/ecommerce-recommender/data-pipeline/: README.md  __init__.py  bigquery_query.py  pipeline.py  run_pipeline.py
fase_2/ecommerce-recommender/data_pipeline/: bigquery_query.py
fase_2/ecommerce-recommender/notebooks/: data_pipeline_eda.ipynb
fase_2/ecommerce_recommender/: .gitignore  CHANGELOG.md  METRICS_DOCUMENTATION.md  MODEL_CARD.md  README.md  requirements.txt
fase_2/ecommerce_recommender/api/: API_TESTING.md  MONITORING_PLAN.md  README.md  __init__.py  exceptions.py  main.py
fase_2/ecommerce_recommender/configs/: README.md  base.yaml  mlflow.yaml  model.yaml  model_gmf.yaml  model_mf.yaml
fase_2/ecommerce_recommender/data/: README.md
fase_2/ecommerce_recommender/data_pipeline/: README.md  bigquery_query.py  bigquery_uploader.py  kaggle_data_loader.py  run_pipeline.py
fase_2/ecommerce_recommender/models/: README.md  assign_champion_alias.py  register_models_mlflow.py
fase_2/infra-api/: README.md  deploy-all.sh  destroy-all.sh
fase_2/scratch/: AGENT.md  AWS_POLICIES_AND_INFRASTRUCTURE_GUIDE.md  DVC_README.md  GRAFANA_INTEGRATION_PLAN.md  SECURITY_VULNERABILITIES_AND_ISSUES.md  TEACHER_ACCESS.md  messy_function.py  next_steps.md  structure.md  test-dvc-simple.sh  test-dvc.sh  test_drift_detection.py  todo.md
fase_2/scripts/: promote_model.py  start_resources.py  stop_resources.py  validate_env.py
(+260 files in other folders)
