[project]
name = "ibm-churn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-bigquery-storage>=2.37.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pandas-gbq>=0.35.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "uvicorn>=0.45.0",
    "xgboost>=3.2.0",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.11",
]

[tool.ruff]
# Target Python version
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# "E" and "W" are PEP 8 errors/warnings
# "F" is Pyflakes (logic errors)
# "I" is Isort (import sorting)
# "B" is Bugbear (common design flaws)
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
