[project]
name = "ecommerce-recommender"
version = "0.1.0"
description = "E-commerce recommender system using PyTorch, MLflow, and DVC"
authors = [
    {name = "dpaula",email = "dpaula@example.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "pandas (>=2.0,<3.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "torch (>=2.12.0,<3.0.0)",
    "mlflow (>=3.13.0,<4.0.0)",
    "dvc (>=3.67.1,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "google-cloud-bigquery (>=3.41.0,<4.0.0)",
    "kagglehub (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "ruff (>=0.0.284,<1.0.0)",
    "pre-commit (>=3.4.0,<4.0.0)"
]
